http-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: registry.k8s.io/e2e-test-images/echoserver:2.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: http-svc
spec:
  # ipFamilyPolicy: RequireDualStack
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-test
  labels:
    name: http-test
  # annotations: 
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.doblerones.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-svc
            port: 
              number: 80
  # tls:
  # - hosts:
    # - k8s.doblerones.de
    # secretName: http-test
